# agent-verse

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
agents/: tier0_ollama.py  tier2_claude.py
docs/: GDD.md
src/agentverse/: __init__.py  engine.py  game.py  protocol.py  tiles.py  world.py
tests/: test_protocol.py  test_tiles.py
