[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentverse"
version = "0.1.0"
description = "A tree-structured exploration game designed for AI agents to play via CLI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Chris Wong" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
agents = ["anthropic>=0.40.0", "requests>=2.32"]

[project.scripts]
agentverse = "agentverse.game:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
